# rcli

./: .gitignore  Cargo.toml  deny.toml  test.http
src/: lib.rs  main.rs  opts.rs  process.rs
src/cli/: base64_opts.rs  csv_opts.rs  genpass_opts.rs  http.rs  mod.rs
src/process/: b64.rs  csv_convert.rs  gen_pass.rs  http_serve.rs  mod.rs
