[package]
name = "rcli"
version = "0.1.0"
authors = ["wiki. <charmfocus@gmail.com>"]
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.91"
axum = { version = "0.7.7", features = ["http2", "query", "tracing"] }
base64 = "0.22.1"
clap = { version = "4", features = ["derive"] }
csv = "1"
rand = "0.8.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.132"
serde_yaml = "0.9.34"
tokio = { version = "1.41.0", features = ["rt", "rt-multi-thread", "net", "fs", "macros"] }
toml = "0.8.19"
tower-http = { version = "0.6.1", features = ["compression-full", "cors", "trace", "fs"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
zxcvbn = "3.1.0"
